--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -11,7 +11,7 @@
 
 <VBox prefHeight="302.0" prefWidth="416.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
-      <Label text="Departamation Registration">
+      <Label text="Seller Registration">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
