--- a/src/gui/ApostadorForm.fxml
+++ b/src/gui/ApostadorForm.fxml
@@ -1,51 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="287.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentFormController">
+
+<AnchorPane prefHeight="303.0" prefWidth="359.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="gui.ApostadorFormController">
    <children>
-      <GridPane prefHeight="142.0" prefWidth="590.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="39.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="403.0" minWidth="10.0" prefWidth="243.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="284.0" minWidth="10.0" prefWidth="284.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Id" />
-            <Label text="Name" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
-            <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="labelErrorName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin></Label>
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <children>
-                  <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
-                  <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
-               </children>
-            </HBox>
-            <TextField fx:id="txtTelefone" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="Telefone" GridPane.rowIndex="2" />
-            <Label fx:id="labelErrorTelefone" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="15.0" />
-               </GridPane.margin></Label>
-         </children>
-      </GridPane>
+      <TextField fx:id="txtName" layoutX="113.0" layoutY="109.0" promptText="Digite aqui" />
+      <Label layoutX="68.0" layoutY="113.0" text="Nome" />
+      <Label layoutX="68.0" layoutY="84.0" text="Id" />
+      <TextField fx:id="txtId" layoutX="113.0" layoutY="80.0" />
+      <Button fx:id="btCancel" layoutX="117.0" layoutY="165.0" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" />
+      <Button fx:id="btSave" layoutX="188.0" layoutY="165.0" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancelar" />
+      <Label fx:id="labelErrorName" layoutX="113.0" layoutY="134.0" textFill="RED" />
    </children>
 </AnchorPane>
